@@ -79,6 +79,9 @@ Extension modules
 Library
 -------
 
+- the random module now uses os.urandom() for seeding if it is available.
+  Added a new generator based on os.urandom().
+
 - difflib and diff.py can now generate HTML.
 
 - bdist_rpm now includes version and release in the BuildRoot, and
